# PacmanForStudents

./: .gitignore  PRD.md  README.md  launcher.py  setup.sh
.a5c/: package-lock.json  package.json
.a5c/processes/: packman-inputs.json  packman-multi-lang-edu.js  packman-website.js
.claude/: settings.json
.claude/context/: orchestrator.md
.claude/state/: agent-comms.md
.claude/system-prompts/: architect.md  backend.md  devops.md  frontend.md  integrator.md  product-manager.md  qa.md
.github/: copilot-instructions.md
cpp/: .clang-tidy  CMakeLists.txt  README.md  game_logic.cpp  game_logic.h  game_panel.cpp  game_panel.h  ghost.cpp  ghost.h  main.cpp  maze.cpp  maze.h  pacman  pacman.cpp  pacman.h  run.sh
cpp/tests/: test_game_logic.cpp  test_ghost.cpp  test_maze.cpp  test_pacman.cpp
docs/: 01_game_loop.md  02_rendering.md  03_input_handling.md  04_collision_detection.md  05_ghost_ai.md  06_state_management.md
docs/architecture/: decision.md
java/: README.md  pom.xml  run.sh
javascript/: README.md  game_logic.test.js  ghost.js  ghost.test.js  maze.test.js  package-lock.json  package.json  pacman.test.js  run.sh
python/: README.md  game_logic.py  game_panel.py  ghost.py  main.py  maze.py  pacman.py  pyproject.toml  run.sh
python/tests/: test_game_logic.py  test_ghost.py  test_maze.py  test_pacman.py
shared/: game_constants.json  maze_layout.json
typescript/: README.md  package-lock.json  package.json  run.sh  tsconfig.json  vitest.config.ts
typescript/src/: game.ts  game_logic.test.ts  game_logic.ts  ghost.test.ts  ghost.ts  maze.test.ts  (+3 more)
(+455 files in other folders)
